--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,31 @@
 gunicorn==19.9.0
-requests==2.20.0
+bokeh==2.0.1
+certifi==2019.11.28
+chardet==3.0.4
+click==7.1.1
+dominate==2.5.1
+Flask==1.1.1
+Flask-Bootstrap==3.3.7.1
+Flask-Datepicker==0.12
+Flask-WTF==0.14.3
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+numpy==1.18.2
+packaging==20.3
+pandas==1.0.3
+Pillow==7.1.1
+pyparsing==2.4.6
+python-dateutil==2.8.1
+pytz==2019.3
+PyYAML==5.3.1
+requests==2.23.0
+six==1.14.0
+static-parameters==0.4
+tornado==6.0.4
+typing-extensions==3.7.4.2
+urllib3==1.25.8
+visitor==0.1.3
+Werkzeug==1.0.0
+WTForms==2.2.1
